--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="独家视频发布！">
+  <meta name="twitter:title" content="一条肌肉狗 muscledoga">
   <meta name="twitter:description" content="点击立即观看完整视频，精彩不容错过！">
-  <meta name="twitter:image" content="https://demiaike01.github.io/card03/assets/1.png">
+  <meta name="twitter:image" content="https://demiaike01.github.io/card13/assets/1.png">
 
   <style>
     * {
